fixing search bar width on mobile

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -67,7 +67,7 @@ input#mainSearchBar{
   background-color: var(--main-bg-color);
   height: 3em;
   font-size: 1em;
-  width: 25%;
+  width: 75%;
   border: 2px solid #4e4b4d;
   border-radius: 50px;
   padding: 0 1em;
@@ -176,10 +176,13 @@ li.expItem p.skillSet span .pillow{
   article.expGroup ul,
   article.expGroup h1,
   .notFound,
-  input#mainSearchBar,
   .myName,
   .intro,
   li.expItem p.skillSet{
     max-width: 30em;
+  }
+
+  input#mainSearchBar{
+    max-width: 20em;
   }
 }
